--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <nav>
-            <a href="#">Home</a>
+            <a href="../index.html">Home</a>
             <a href="#">Blog</a>
             <hr/>
             </nav>
