--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Sitemap</title>
+	<link href="styles/style.css" rel="stylesheet"/>
     </head>
     <body>
         <a href="aboutme/aboutme.html">About Me</a>
+	<h1>This is the most gorgeous website you've ever seen in your life.</h1>
     </body>
 </html>
