made it even purtier

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link href="styles/style.css" rel="stylesheet"/>
     </head>
     <body>
+	<h1>WDD Projects</h1>
+	<hr/>
         <a href="aboutme/aboutme.html">About Me</a>
-	<h1>This is the most gorgeous website you've ever seen in your life.</h1>
     </body>
 </html>
