--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Sitemap</title>
+        <title>Sam Dustin</title>
 	<link href="styles/style.css" rel="stylesheet"/>
     </head>
     <body>
