--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h1>WDD Projects</h1>
 	<hr/>
         <a href="aboutme/aboutme.html">About Me</a>
+	<a href="wwr/index.html">McChicken industries</a>
     </body>
 </html>
