--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
 	<h1>WDD Projects</h1>
 	<hr/>
-        <a href="aboutme/aboutme.html">About Me</a>
-	<a href="wwr/index.html">McChicken industries</a>
+        <a href="aboutme/aboutme.html">About Me</a><br/>
+	<a href="wwr/index.html">Dry Oar White Water Rafting</a>
     </body>
 </html>
