--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
 	<h1>WDD Projects</h1>
 	<hr/>
+    <nav>
         <a href="aboutme/aboutme.html">About Me</a><br/>
 	<a href="wwr/index.html">Dry Oar White Water Rafting</a>
+</nav>
     </body>
 </html>
