--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,28 +10,28 @@
 
 <body>
   <header>
-    <h1>McChicken Site Plan</h1>
+    <h1>Dry Oar White Water Rafting Site Plan</h1>
     <h2>Sam Dustin</h2>
     <h2>WDD 130-03</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
-
+    <!-- ------------------------Steps 2-5------------------------------ -->
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Here at McChicken, we are passionate about chicken sandwiches. Whether with lettuce, without, or even with a little bit of tomato, we know that McChickens bring joy.</p>
+    <p>At Dry Oar, we're all about the next greatest thrill. That's why we're bringing our passion to the internet, to help those that may be far away, but would otherwise be interested.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>This website is designed with the average Joe and his family in mind. We know that you don't have time to go and make gourmet meals every day. That's why we do it for you. Join us, and partake in McChicken</p>
+    <p>We direct our content primarily to those located within the vicinity of Dry Oar. We do, however, open up our website and our services to anyone that may be interested in our services.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/McD-McChicken_%28infobox%29.png/1200px-McD-McChicken_%28infobox%29.png" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/resources/images/logos/logoyello.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-       target="_blank">https://coolors.co/fcaa67-b0413e-ffffc7-548687-473335</a>
+    <a href="https://coolors.co/fcaa67-b0413e-ffffc7-548687-473335"
+      target="_blank">https://coolors.co/fcaa67-b0413e-ffffc7-548687-473335</a>
 
     <table class="colors">
       <tr>
@@ -55,7 +55,7 @@
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
         <td class="primary">[#B0413E]</td>
-        <td class="secondary">[##FCAA67]</td>
+        <td class="secondary">[#FCAA67]</td>
         <td class="accent1">[#FFFFC7]</td>
         <td class="accent2"></td>
       </tr>
