--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<a id="logo_link" href="index.html">
-			<img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+			<img class="logo" src="https://byui-wdd.github.io/wdd130/resources/images/logos/logoyello.png" alt="Dry Oar Logo">
 		</a>
 		<nav>
 			<a href="index.html">Home</a>
