--- a/wwr/index.html
+++ b/wwr/index.html
@@ -54,7 +54,7 @@
 		</section>
 	</main>
 	<footer>
-		<h3>Dry Oar &copy; 20XX - Your First and Last Name Here</h3>
+		<h3>Dry Oar &copy; 2022 - Sam Dustin</h3>
 		<h3><a href="site-plan-rafting.html">Site Plan</a></h3>
 		<h3><a href="contactus.html">Contact Us</a></h3>
 		<div class="social">
