--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="aboutme/aboutme.html">About Me</a><br/>
 	<a href="wwr/index.html">Dry Oar White Water Rafting</a>
+    <a href="ice/index.html">President Nelson Quote</a>
 </nav>
     </body>
 </html>
