--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<hr/>
     <nav>
         <a href="aboutme/aboutme.html">About Me</a><br/>
-	<a href="wwr/index.html">Dry Oar White Water Rafting</a>
-    <a href="ice/index.html">President Nelson Quote</a>
+	<a href="wwr/index.html">Dry Oar White Water Rafting</a><br/>
+    <a href="ice/ice.html">President Nelson Quote</a>
 </nav>
     </body>
 </html>
