--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="styles/style.css" rel="stylesheet">
 	<title>Dry Oar White Water Rafting | Home</title>
 </head>
 <body>
+	<div id="content">
 	<header>
 		<a id="logo_link" href="index.html">
 			<img class="logo" src="https://byui-wdd.github.io/wdd130/resources/images/logos/logoyello.png" alt="Dry Oar Logo">
@@ -46,6 +48,7 @@
 			<img class="icon" src="images/oars.png" alt="oars icon">
 			<h2>Rapids</h2>
 		</section>
+		<div id="background"></div> 
 		<img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
 		<section class="msg">
 			<h2>More Than Just The Thrill</h2>
@@ -56,18 +59,19 @@
 	<footer>
 		<h3>Dry Oar &copy; 2022 - Sam Dustin</h3>
 		<h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-		<h3><a href="contactus.html">Contact Us</a></h3>
+		<h3><a href="contactus.html" target="_blank">Contact Us</a></h3>
 		<div class="social">
-			<a href="https://facebook.com">
+			<a href="https://facebook.com" target="_blank">
 				<img src="images/facebook.png" alt="fb icon">
 			</a>
-			<a href="https://twitter.com">
+			<a href="https://twitter.com" target="_blank">
 				<img src="images/twitter.png" alt="twitter icon">
 			</a>
-			<a href="https://instagram.com">
+			<a href="https://instagram.com" target="_blank">
 				<img src="images/instagram.png" alt="instagram icon">
 			</a>
 		</div>
 	</footer>
+</div>
 	</body>  
 </html>
