updated the font name

--- a/cowsay/siteplan.html
+++ b/cowsay/siteplan.html
@@ -65,7 +65,7 @@
         Heading Font: Montserrat  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Lato  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
