--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -120,9 +120,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rivers</h3>
+    <p>This page is to display the various trips we run</p>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/rivers.png" alt="page 2 wireframe">
   </main>
 </body>
 
