--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -103,7 +103,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Rivers
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -121,7 +121,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>Rivers</h3>
-    <p>This page is to display the various trips we run</p>
+    <p>This page will list all of the River Trips that we run. The purpose of this page is to show to the end user the various trips that they can participate in through Dry Oar.</p>
 
     <img src="images/rivers.png" alt="page 2 wireframe">
   </main>
