more additions to the site plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -102,8 +102,7 @@
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        Rivers
+      <div class="sm-page2">Rivers
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -122,8 +121,10 @@
 
     <h3>Rivers</h3>
     <p>This page will list all of the River Trips that we run. The purpose of this page is to show to the end user the various trips that they can participate in through Dry Oar.</p>
-
     <img src="images/rivers.png" alt="page 2 wireframe">
+    <h3>Page Images</h3>
+    <img src="images/rafting65_600.jpg"/>
+    <img src="images/rafting42_600.jpg"/>
   </main>
 </body>
 
