--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,42 +20,25 @@
 			<a href="contactus.html">Contact Us</a>
 		</nav>
 	</header>
-	<div id="hero">
-		<div id="hero-box">
-			<img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-		</div>
-		<section id="hero-msg">
-			<h1 class="home-title">Have An Adventure</h1>
-			<h4>Make Memories with Dry Oar </h4>
-			<div class='button-box'>
-				<a class='book' href="rates.html">Book Now</a>
-			</div>
+
+	<main class="rivers-grid">
+		<section class="rivers-card-1">
+			<img class="rivers-card-img" src="images/rafting26_600.jpg" alt="floating the chattahoochee">
+			<h2 class="river-title">Chattahoochee</h2>
+			<p>The Chattahoochee is a local legend for white water rafting. We float a dam-released section of the river, which brings a calm river in the morning, and wild rapids later in the day. Whether you're new or experienced, the Chattahoochee is a great option!</p>
 		</section>
-	</div>
-	<main class="home-grid">
-		<section class="rivers-card">
-			<img class="card-img" src="images/rivers.jpg" alt="river in forest">
-			<img class="icon" src="images/river_icon.png" alt="river icon">
-			<h2>Rivers</h2>
+		<section class="rivers-card-2">
+			<img class="rivers-card-img" src="images/rafting42_600.jpg" alt="floating the Chattooga">
+			<h2 class="river-title">Chattooga</h2>
+			<p>The Chattooga is gorgeous. Being the filming location for the movie "Deliverance", this trip has a variety of different rapid levels, spanning from 1 to 3, providing a good time for any adventurer.</p>
 		</section>
-		<section class="camping-card">
-			<img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-			<img class="icon" src="images/fire_icon.png" alt="fire icon">
-			<h2>Camping</h2>
-		</section>
-		<section class="rapids-card">
-			<img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-			<img class="icon" src="images/oars.png" alt="oars icon">
-			<h2>Rapids</h2>
-		</section>
-		<div id="background"></div> 
-		<img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-		<section class="msg">
-			<h2>More Than Just The Thrill</h2>
-			<p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-			<a class='join' href="rivers.html">Join Us</a>
+		<section class="rivers-card-3">
+			<img class="rivers-card-img" src="images/rafting65_600.jpg" alt="floating the Toccoa">
+			<h2 class="river-title">Toccoa</h2>
+			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam error quibusdam amet hic nam accusantium voluptatibus ad ab culpa perferendis atque illo magnam quisquam tempora veritatis velit minus, ullam officia?</p>
 		</section>
 	</main>
+
 	<footer>
 		<h3>Dry Oar &copy; 2022 - Sam Dustin</h3>
 		<h3><a href="site-plan-rafting.html">Site Plan</a></h3>
