added content to rivers page

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -35,10 +35,10 @@
 		<section class="rivers-card-3">
 			<img class="rivers-card-img" src="images/rafting65_600.jpg" alt="floating the Toccoa">
 			<h2 class="river-title">Toccoa</h2>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam error quibusdam amet hic nam accusantium voluptatibus ad ab culpa perferendis atque illo magnam quisquam tempora veritatis velit minus, ullam officia?</p>
+			<p>The Toccoa is our calmest trip. It's meant for the faint of heart and the family-friendly. This Blue Ridge river offers families a chance to get away from every-day life and peacefully float the river with their loved ones.</p>
 		</section>
 	</main>
-
+	<h2 style="text-align: center;color:white;font-family: 'Rock Salt', 'Bradley Hand', sans-serif;font-size: 52px;margin-top: 50px;margin-bottom: -40px">Come Adventure with Us!</h2>
 	<footer>
 		<h3>Dry Oar &copy; 2022 - Sam Dustin</h3>
 		<h3><a href="site-plan-rafting.html">Site Plan</a></h3>
